--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
+      <version>10.14.0</version>
     </dependency>
 
     <!-- Spring AI: OpenAI + VectorStore (pgvector) + PDF reader + MCP -->
