--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
   <properties>
     <java.version>21</java.version>
     <spring-ai.version>1.1.0-SNAPSHOT</spring-ai.version>
+    <flyway.version>10.14.0</flyway.version>
   </properties>
 
   <dependencies>
